--- a/singolo2.css
+++ b/singolo2.css
@@ -179,6 +179,7 @@ a {
   flex-direction: column;
   width: 1020px;
   height: 864px;
+  margin: 0 auto;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
 }
@@ -317,6 +318,7 @@ a {
   flex-direction: column;
   width: 1020px;
   height: 728px;
+  margin: 0 auto;
   background-color: #f2f2f2;
   border-bottom: 6px solid #ffffff;
 }
